// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Component Process CSV to Table 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <h1>
          CSV TO Table
        </h1>
        <p>
          Please upload 
          <strong>
            .csv
          </strong>
           to see some magic happen :)
        </p>
        <input
          accept=".csv"
          data-testid="inputFile"
          type="file"
        />
        <table
          border="1"
        >
          <thead>
            <tr>
              <th>
                Name
              </th>
              <th>
                Job
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Lakshmi
              </td>
              <td>
                UI Engineer
              </td>
            </tr>
            <tr>
              <td>
                Kalyan
              </td>
              <td>
                DevOPS
              </td>
            </tr>
            <tr>
              <td>
                Haseena
              </td>
              <td>
                React Developer
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h1>
        CSV TO Table
      </h1>
      <p>
        Please upload 
        <strong>
          .csv
        </strong>
         to see some magic happen :)
      </p>
      <input
        accept=".csv"
        data-testid="inputFile"
        type="file"
      />
      <table
        border="1"
      >
        <thead>
          <tr>
            <th>
              Name
            </th>
            <th>
              Job
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Lakshmi
            </td>
            <td>
              UI Engineer
            </td>
          </tr>
          <tr>
            <td>
              Kalyan
            </td>
            <td>
              DevOPS
            </td>
          </tr>
          <tr>
            <td>
              Haseena
            </td>
            <td>
              React Developer
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App Component Should render successfully 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <h1>
          CSV TO Table
        </h1>
        <p>
          Please upload 
          <strong>
            .csv
          </strong>
           to see some magic happen :)
        </p>
        <input
          accept=".csv"
          data-testid="inputFile"
          type="file"
        />
        <table
          border="1"
        >
          <thead>
            <tr />
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h1>
        CSV TO Table
      </h1>
      <p>
        Please upload 
        <strong>
          .csv
        </strong>
         to see some magic happen :)
      </p>
      <input
        accept=".csv"
        data-testid="inputFile"
        type="file"
      />
      <table
        border="1"
      >
        <thead>
          <tr />
        </thead>
        <tbody />
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
